# GPS-Tracking-Full-System

./: .gitignore  .gitmodules  CMakeLists.txt  Dockerfile  LICENSE  bootstrap.sh  build.sh  vcpkg.json
cmake/: CPM.cmake  LTO.cmake  Warnings.cmake
src/: CMakeLists.txt  main.cpp
src/GPS-Tracking/common/: CMakeLists.txt  timer.cpp  timer.hpp
src/GPS-Tracking/core/: CMakeLists.txt  config.cpp  config.hpp  multiThread.cpp  multiThread.hpp
src/GPS-Tracking/database/: .#insert.cpp  CMakeLists.txt  create.cpp  create.hpp  database.cpp  database.hpp  read.cpp  read.hpp
src/GPS-Tracking/httpsRequest/: CMakeLists.txt  httplib.h  httpsRequest.cpp  httpsRequest.hpp  post.cpp  post.hpp
src/GPS-Tracking/mqtt/: CMakeLists.txt  connection.cpp  connection.hpp  publisher.cpp  publisher.hpp  subscriber.cpp  subscriber.hpp  toggleController.cpp  toggleController.hpp
src/GPS-Tracking/server/: '  CMakeLists.txt  data.hpp  decodeMessage.cpp  decodeMessage.hpp  gps_imei.json  hexToDecimal.cpp  hexToDecimal.hpp  messageComponent.cpp  messageComponent.hpp  read_imei_json.cpp  read_imei_json.hpp  resetSocket.cpp  resetSocket.hpp  server.cpp  server.hpp  server2.cpp  server2.hpp  server_R11.cpp  server_R11.hpp  tcp - old.cpp  tcp.cpp  tcp.hpp
